--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lykketræf</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <header>
+       <h1>Bloggen med de store armbevægelser.</h1> 
+       <ul id="menu-items">
+        <li>
+            <a href="inspiration.html" class="menu-items">inspiration</a>
+        </li>
+        <li><a href="diy.html" class="menu-items">diy</a></li>
+        <li> <a href="om.html" class="menu-items">om MIG</a></li>
+       </ul>
+       
+    </header>
     
 </body>
 </html>
