--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        
        
      </header>
-    <nav>
+    <nav class="menu">
         <ul id="menu-items">
             <li>
                 <a href="inspiration.html" class="menu-items">inspiration</a>
@@ -28,7 +28,7 @@
                 <a href="om.html" class="menu-items">om MIG</a>
             </li>
             <li>
-                <a href="nyhedsbrev.html" class="nyhedsbrev">nyhedsbrev</a>
+                <a href="nyhedsbrev.html" class="menu-items">nyhedsbrev</a>
             </li>
            </ul>
         </nav>
