--- a/nyhedsbrev.html
+++ b/nyhedsbrev.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <h2> 
-            Kan du heller ikke få nok af mig, så tilmeld dig mit nyhedsbrev
+            Kan du heller ikke få nok af mig❤️‍🔥   -så tilmeld dig mit nyhedsbrev
         </h2>
-        <p>Jeg sender nyhedsbreve ud 2 gange dagligt også om søndagen. - du behøver ikke savne mig.</p>
+        <p>Jeg sender nyhedsbreve ud 2 gange dagligt -også om søndagen! </p>
     </header>
 </body>
 </html>
