--- a/inspiration.html
+++ b/inspiration.html
@@ -13,12 +13,12 @@
     </header>
     <main>
         <section>
-            <img src="img/cafestolsort.jpg" alt="plastikstol">
+            <img src="img/plastikstol.jpg" alt="plastikstol">
         </section>
-        <p>Jeg elsker at gå på cafe med veninder, familie og venner.
-            <span>--men hvorfor ikke skabe cafestemmning i hjemmet.</span>
-            <span>Det kan man gøre ved at købe cafestole.</span>
-            <span>De her stole har jeg malet sort, men du er naturligvis også velkommen til male dem i en anden farve</span>
+        <p>Jeg tror at plastik vinder indpas i indretningen.
+            <span>-især af genbrugsplast.</span>
+            <span> Du kan leje dem, så du kan nemt kan komme af med dem igen hvis du bliver træt af dem.</span>
+            <span>De her stole er mine egne og dem har jeg malet sort, men du er naturligvis også velkommen til male dem i en anden farve</span>
         </p>
 
     </main>
