--- a/diy.html
+++ b/diy.html
@@ -5,20 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ursulas blog ❤️‍🔥 diy</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+<script src="javascript.js"defer></script>
 
 </head>
 <body>
     <header>
-        <h2>
-            Få verdensklasse ideer
+         <br> br <h2>
+            FÅ DE BEDSTE IDEER HER ❤️‍🔥
         </h2>
     </header>
+    <nav class="menu">
+        <ul id="menu-items">
+            <Li class="selected">
+                <a href="index.html" class="menu-items">forside</a>
+            <li>
+                <a href="inspiration.html" class="menu-items">inspiration</a>
+            </li>
+            <li>
+                <a href="diy.html" class="menu-items">diy</a>
+            </li>
+            <li> 
+                <a href="om.html" class="menu-items">om MIG</a>
+            </li>
+            <li>
+                <a href="nyhedsbrev.html" class="menu-items">nyhedsbrev</a>
+            </li>
+           </ul>
+        </nav>
     <main>
         <section>
-            <img src="img/farverig stol.jpg" alt="foto af en stol">
+            <img src="assets/css/img/farverig.jpg" alt="foto af en stol">
         </section>
         <section>
-            <img src="img/billedet af stol.jpg" alt="endnu et foto af stol">
+            <img src="assets/css/img/farverigstol2.jpg" alt="endnu et foto af stol">
         </section>
         <p>
             Det er ikke til at se men stolen er fra genbrug, jeg kender de bedste steder. <span>
