--- a/inspiration.html
+++ b/inspiration.html
@@ -5,15 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ursulas blog ❤️‍🔥inspiration</title>
+<link rel="stylesheet" href="assets/css/style.css">
+<script src="javascript.js"defer></script>
 
 </head>
 <body>
     <header>
-        <h2>Her findes den bedste inspiration</h2>
+        <br><h2> HER FINDES DEN BEDSTE INSPIRATION ❤️‍🔥</h2>
     </header>
+    <nav class="menu">
+        <ul id="menu-items">
+            <Li class="selected">
+                <a href="index.html" class="menu-items">
+                Forside
+            </a>
+            <li>
+                <a href="inspiration.html" class="menu-items">inspiration</a>
+            </li>
+            <li>
+                <a href="diy.html" class="menu-items">diy</a>
+            </li>
+            <li> 
+                <a href="om.html" class="menu-items">om MIG</a>
+            </li>
+            <li>
+                <a href="nyhedsbrev.html" class="menu-items">nyhedsbrev</a>
+            </li>
+           </ul>
+        </nav>
     <main>
         <section>
-            <img src="img/plastikstol.jpg" alt="plastikstol">
+            <img src="assets/css/img/plastikstol1.jpg" alt="plastikstol">
         </section>
         <p>Jeg tror at plastik vinder indpas i indretningen.
             <span>-især af genbrugsplast.</span>
