--- a/om.html
+++ b/om.html
@@ -5,14 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Om MIG ❤️‍🔥</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+<script src="javascript.js"defer></script>
     
 </head>
 <body>
     <header>
-        <h2>Her er jeg.</h2>
+        <h2>Her er jeg❤️‍🔥</h2>
     </header>
+    <nav class="menu">
+        <ul id="menu-items">
+            <Li class="selected">
+                <a href="index.html" class="menu-items">
+                Forside
+            </a>
+            <li>
+                <a href="inspiration.html" class="menu-items">inspiration</a>
+            </li>
+            <li>
+                <a href="diy.html" class="menu-items">diy</a>
+            </li>
+            <li> 
+                <a href="om.html" class="menu-items">om MIG</a>
+            </li>
+            <li>
+                <a href="nyhedsbrev.html" class="menu-items">nyhedsbrev</a>
+            </li>
+           </ul>
+        </nav>
     <main>
-    <img src="img/pexels-airam-datoon-9637704.jpg" alt="billedet af Ursula">
+    <img src="assets/css/img/ursula.jpg" alt="billedet af Ursula">
 
         <h2>Her bliver en lille fjer til en stor høne</h2>
     </main>
