--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header>
-       <h1> Ursulas blog ❤️‍🔥</h1> 
-       <br> <p> -bloggen med de store armbevægelser.</p>
+       <br> <br> <br> <h1> Ursulas blog ❤️‍🔥</h1> 
+     <p> -bloggen med de store armbevægelser.</p>
        
        
      </header>
