--- a/inspiration.html
+++ b/inspiration.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <br><h2> HER FINDES DEN BEDSTE INSPIRATION ❤️‍🔥</h2>
+      <br>  <br><h2> HER FINDES DEN BEDSTE INSPIRATION ❤️‍🔥</h2>
     </header>
     <nav class="menu">
         <ul id="menu-items">
@@ -37,11 +37,13 @@
         <section>
             <img src="assets/css/img/plastikstol1.jpg" alt="plastikstol">
         </section>
+        <div class="text">
         <p>Jeg tror at plastik vinder indpas i indretningen.
-            <span>-især af genbrugsplast.</span>
-            <span> Du kan leje dem, så du kan nemt kan komme af med dem igen hvis du bliver træt af dem.</span>
-            <span>De her stole er mine egne og dem har jeg malet sort, men du er naturligvis også velkommen til male dem i en anden farve</span>
+             <br> -især af genbrugsplast.
+            <br> Du kan leje dem, så du kan nemt kan komme af med dem igen hvis du bliver træt af dem.
+            <br> De her stole er mine egne og dem har jeg malet sort, men du er naturligvis også velkommen til male dem i en anden farve.
         </p>
+        </div>
 
     </main>
    
