--- a/om.html
+++ b/om.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h2>Her er jeg❤️‍🔥</h2>
+      <br> <br>  <h2>Her er jeg❤️‍🔥</h2>
     </header>
     <nav class="menu">
         <ul id="menu-items">
