--- a/nyhedsbrev.html
+++ b/nyhedsbrev.html
@@ -12,9 +12,9 @@
     <header>
         
         <h2> 
-            KAN DU HELLER IKKE FÅ NOK AF MIG❤️‍🔥   -så tilmeld dig mit nyhedsbrev
+      <br> <br>      KAN DU HELLER IKKE FÅ NOK AF MIG❤️‍🔥   -så tilmeld dig mit nyhedsbrev
         </h2>
-        <br> <br>
+        <br>
         <p>Jeg sender nyhedsbreve ud 2 gange dagligt -også om søndagen! </p>
     </header>
     <nav class="menu">
