--- a/diy.html
+++ b/diy.html
@@ -40,11 +40,13 @@
         <section>
             <img src="assets/css/img/farverigstol2.jpg" alt="endnu et foto af stol">
         </section>
+        <div class="text">
         <p>
-            Det er ikke til at se men stolen er fra genbrug, jeg kender de bedste steder. <span>
+            Det er ikke til at se men stolen er fra genbrug, jeg kender de bedste steder. 
                 Den var grim og grå, så jeg tog til Italien og købte det smukkeste italienske bomuld.
-            </span>
+            
         </p>
+    </div>
     </main>
 </body>
 </html>
