--- a/om.html
+++ b/om.html
@@ -34,9 +34,14 @@
            </ul>
         </nav>
     <main>
+        <div class="container">
     <img src="assets/css/img/ursula.jpg" alt="billedet af Ursula">
+     </div>
 
-        <h2>Her bliver en lille fjer til en stor høne</h2>
+    <div class="text">
+
+        <p>Her bliver en lille fjer til en stor høne<p>
+    </div>
     </main>
     
     
