--- a/diy.html
+++ b/diy.html
@@ -34,12 +34,14 @@
            </ul>
         </nav>
     <main>
+        <div class="container">
         <section>
             <img src="assets/css/img/farverig.jpg" alt="foto af en stol">
         </section>
         <section>
             <img src="assets/css/img/farverigstol2.jpg" alt="endnu et foto af stol">
         </section>
+       </div>
         <div class="text">
         <p>
             Det er ikke til at se men stolen er fra genbrug, jeg kender de bedste steder. 
