--- a/inspiration.html
+++ b/inspiration.html
@@ -34,9 +34,11 @@
            </ul>
         </nav>
     <main>
+        <div class="container">
         <section>
             <img src="assets/css/img/plastikstol1.jpg" alt="plastikstol">
         </section>
+        </div>
         <div class="text">
         <p>Jeg tror at plastik vinder indpas i indretningen.
              <br> -især af genbrugsplast.
