--- a/index.html
+++ b/index.html
@@ -69,28 +69,14 @@
 
         <main>
             <div class="container">
-
-                <section>
-                    <img src="assets/css/img/farverig.jpg" alt="stol">
-                    <a href="http://127.0.0.1:5500/diy.html"></a>
-                </section>
-
-                <div class="text1">
-                    <p> Se hvordan du </br>ombetrækker en stol</p>
-                </div>
+                <div class="box-1"><img src="assets/css/img/farverig.jpg" alt="stol"></div>
+                <div class="box-2"><p>Se hvordan du </br>ombetrækker en stol</p></div>
+                 <div class="box-3" ><img src="assets/css/img/plastikstol1.jpg" alt="stol"></div>
+                 <div class="box-4"><p>Se hvordan du kan skabe stemmning i dit hjem</p></div>
+                
  
             </div>
 
-
-            <div class="container">
-                <section>
-                    <img src="assets/css/img/plastikstol1.jpg" alt="cafestol">
-                </section>
-            </div>
-
-            <div class="text2">
-                <p> Se hvordan du kan skabe stemmning i dit hjem</p>
-            </div>
 
         </main>
     </div>
