--- a/inspiration.html
+++ b/inspiration.html
@@ -37,9 +37,9 @@
     <div class="container-i">
           <div class="box-i"><img src="assets/css/img/plastikstol1.jpg" alt="plastikstol"></div>
         
-        <div class="box-j"><p>Jeg tror at plastik vinder indpas i indretningen.
-            <br> -især af genbrugsplast.<br> Du kan leje dem, så du kan nemt kan komme af med dem igen hvis du bliver træt af dem.
-           <br> De her stole er mine egne og dem har jeg malet sort, men du er naturligvis også velkommen til male dem i en anden farve.</p>
+        <div class="box-j"><p>Jeg tror, at plastik vinder indpas i indretningen.
+            <br> -især af genbrugsplast.<br>De her stole er købt nye i hvide, som jeg har malet sort.
+           <br> -du er naturligvis velkommen til, at male dem i en anden farve. <br>Du kan også leje stolene, så kan du spare penge</p>
         </div>
     </div>
 
