--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
     <nav class="menu">
         <ul id="menu-items">
             <Li class="selected">
-                <a href="index.html" class="menu-items">forside</a>
+                <a href="index.html" class="menu-items">Forside</a>
             <li>
-                <a href="inspiration.html" class="menu-items">inspiration</a>
+                <a href="inspiration.html" class="menu-items">Inspiration</a>
             </li>
             <li>
-                <a href="diy.html" class="menu-items">diy</a>
+                <a href="diy.html" class="menu-items">Diy</a>
             </li>
             <li>
                 <a href="om.html" class="menu-items">om MIG</a>
             </li>
             <li>
-                <a href="nyhedsbrev.html" class="menu-items">nyhedsbrev</a>
+                <a href="nyhedsbrev.html" class="menu-items">Nyhedsbrev</a>
             </li>
         </ul>
     </nav>
@@ -70,9 +70,9 @@
         <main>
             <div class="container">
                 <div class="box-1"><img src="assets/css/img/farverig.jpg" alt="stol"></div>
-                <div class="box-2"><p>Se hvordan du </br>ombetrækker en stol</p></div>
+                <div class="box-2"><p> <br> Se hvordan du </br>ombetrækker en stol</p></div>
                  <div class="box-3" ><img src="assets/css/img/plastikstol1.jpg" alt="stol"></div>
-                 <div class="box-4"><p>Se hvordan du kan skabe stemmning i dit hjem</p></div>
+                 <div class="box-4"><p> <br> <br>  Se hvordan du kan skabe <br> stemmning i dit hjem</p></div>
                 
  
             </div>
