--- a/inspiration.html
+++ b/inspiration.html
@@ -35,10 +35,11 @@
         </nav>
     <main>
     <div class="container-i">
-          <div class="box-i"><img src="assets/css/img/plastikstol1.jpg" alt="plastikstol"></div>
+          <div class="box-i"><img src="assets/css/img/plastikstol1.jpg" alt="plastikstol"> </div>
+            
         
         <div class="box-j"><p>Jeg tror, at plastik vinder indpas i indretningen.
-            <br> -især af genbrugsplast.<br>De her stole er købt nye i hvide, som jeg har malet sort.
+            <br> -især af genbrugsplast.<br> <br> De her stole er købt nye i hvide, som jeg har malet sort.
            <br> -du er naturligvis velkommen til, at male dem i en anden farve. <br>Du kan også leje stolene, så kan du spare penge</p>
         </div>
     </div>
