--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="diy.html" class="menu-items">Diy</a>
             </li>
             <li>
-                <a href="om.html" class="menu-items">om MIG</a>
+                <a href="om.html" class="menu-items">Om MIG</a>
             </li>
             <li>
                 <a href="nyhedsbrev.html" class="menu-items">Nyhedsbrev</a>
@@ -65,10 +65,12 @@
 
         <main>
             <div class="container">
-                <div class="box-1"><img src="assets/css/img/farverig.jpg" alt="stol"></div>
-                <div class="box-2"><p> <br> Se hvordan du </br>ombetrækker en stol</p></div>
-                 <div class="box-3" ><img src="assets/css/img/plastikstol1.jpg" alt="stol"></div>
-                 <div class="box-4"><p> <br> <br>  Se hvordan du kan skabe <br> stemmning i dit hjem</p></div>
+                <div class="box-1">
+                    <a href="http://127.0.0.1:5500/diy.html"><img src="assets/css/img/farverig.jpg" alt="lænestol"></a></div>
+                    <div class="box-2"><a href="http://127.0.0.1:5500/diy.html"><p> <br> <br> Se hvordan jeg har ombetrukket lænestolen </p></a></div>
+                 <div class="box-3"><a href="http://127.0.0.1:5500/inspiration.html"><img src="assets/css/img/plastikstol1.jpg" alt="stol i plastik"></a></div>
+                 <div class="box-4"><a href="http://127.0.0.1:5500/inspiration.html"><p> <br> <br> Se hvordan du kan skabe <br> stemmning i dit hjem.</p></a></div>
+                 <!-- <div class="box-4"><p> <br> <br>  Se hvordan du kan skabe <br> stemmning i dit hjem</p></div> -->
                 
  
             </div>
