--- a/diy.html
+++ b/diy.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <header>
-         <br> br <h2>
+        <br> <br> <br>
+        <h1> Ursulas blog ❤️‍🔥</h1>
+          <h2>
             FÅ DE BEDSTE IDEER HER ❤️‍🔥
         </h2>
     </header>
