--- a/inspiration.html
+++ b/inspiration.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <header>
-      <br>  <br><h2> HER FINDES DEN BEDSTE INSPIRATION ❤️‍🔥</h2>
+        <br> <br> <br>
+        <h1> Ursulas blog ❤️‍🔥</h1>
+        <h2> HER FINDES DEN BEDSTE INSPIRATION ❤️‍🔥</h2>
     </header>
     <nav class="menu">
         <ul id="menu-items">
