--- a/nyhedsbrev.html
+++ b/nyhedsbrev.html
@@ -10,11 +10,12 @@
 </head>
 <body>
     <header>
-        
-        <h2> 
-      <br> <br>      KAN DU HELLER IKKE FÅ NOK AF MIG❤️‍🔥   -så tilmeld dig mit nyhedsbrev
-        </h2>
-        <br>
+        <br> <br> <br>
+        <h1> Ursulas blog ❤️‍🔥</h1>
+         <h4> 
+        KAN DU HELLER IKKE FÅ NOK AF MIG❤️‍🔥   -så tilmeld dig mit nyhedsbrev
+        </h4>
+        <br> <br> <br>
         <p>Jeg sender nyhedsbreve ud 2 gange dagligt -også om søndagen! </p>
     </header>
     <nav class="menu">
