--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 <footer>
     <section class="footer1">
         <ul>
-            <li><b>Fang MIG❤️‍🔥</b> Ursulas@home.dk </li></ul>
-        </section>
+            <li> <b> Fang MIG❤️‍🔥 </b> Ursulas@home.dk </li>
+     </section>
         <section class="footer2">
             <li> <b>Følg MIG❤️‍🔥</b> <a href="https://icons8.com/icon/32323/instagram"><img src="assets/css/img/lilleiconinsta.png" alt="instagram icon"></a> <a href="https://www.iconfinder.com/search/icons?q=logo&price=free"><img src="assets/css/img/lillefacebookicon.png" alt="facebookicon"></a></li>
         </section>
         <section class="footer3">
-            <li> <b>Like MIG❤️‍🔥</b>  <a href="https://www.iconfinder.com/search?q=tiktok&price=free"><img src="assets/css/img/lilletiktokicon.png" alt=" tiktok icon"></a> <a href="https://www.iconfinder.com/search?q=youtube&price=free"><img src="assets/css/img/ekstrayoutube.png" alt="youtubeicon"></a> </li>
+            <li> <b>Like MIG❤️‍🔥</b>  <a href="https://www.iconfinder.com/search?q=tiktok&price=free"><img src="assets/css/img/lilletiktokicon.png" alt=" tiktok icon"></a> <a href="https://www.iconfinder.com/search?q=youtube&price=free"><img src="assets/css/img/ekstrayoutube.png" alt="youtubeicon"></a> </li></ul>
         </section>
         
             
