--- a/diy.html
+++ b/diy.html
@@ -13,9 +13,9 @@
     <header>
         <br> <br> <br>
         <h1> Ursulas blog ❤️‍🔥</h1>
-          <h2>
-            FÅ DE BEDSTE IDEER HER ❤️‍🔥
-        </h2>
+          <p>
+            Få de bedste ideer her ❤️‍🔥
+          </p>
     </header>
     <nav class="menu">
         <ul id="menu-items">
