--- a/inspiration.html
+++ b/inspiration.html
@@ -13,7 +13,7 @@
     <header>
         <br> <br> <br>
         <h1> Ursulas blog ❤️‍🔥</h1>
-        <h2> HER FINDES DEN BEDSTE INSPIRATION ❤️‍🔥</h2>
+        <p> Her findes den bedste inspiration ❤️‍🔥<p>
     </header>
     <nav class="menu">
         <ul id="menu-items">
