--- a/nyhedsbrev.html
+++ b/nyhedsbrev.html
@@ -13,10 +13,10 @@
         <br> <br> <br>
         <h1> Ursulas blog ❤️‍🔥</h1>
          <h4> 
-        KAN DU HELLER IKKE FÅ NOK AF MIG❤️‍🔥   -så tilmeld dig mit nyhedsbrev
+        Hvis du ikke kan få nok af mig❤️‍🔥  -så tilmeld dig mit nyhedsbrev
         </h4>
-        <br> <br> <br>
-        <p> <b> Jeg sender nyhedsbreve ud 2 gange dagligt -også om søndagen! </b> </p>
+        <br> <br> <br> <br>
+        <p>  Jeg sender nyhedsbreve ud 2 gange dagligt -også om søndagen!  </p>
     </header>
     <nav class="menu">
     
