--- a/om.html
+++ b/om.html
@@ -13,7 +13,7 @@
     <header>
         <br> <br> <br>
         <h1> Ursulas blog ❤️‍🔥</h1>
-        <h2>Her er jeg❤️‍🔥</h2>
+        <p>Her er jeg❤️‍🔥<p>
     </header>
     <nav class="menu">
         <ul id="menu-items">
