--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <header>
         <br> <br> <br>
-        <h1> Ursulas blog ❤️‍🔥 </h1>
+        <h1>  <a href="index.html"> Ursulas blog❤️‍🔥</a></h1> 
         <p> -bloggen med de store armbevægelser.</p>   
-
+         <a href="index.html"></a> 
     </header>
     <nav class="menu">
         <ul id="menu-items">
@@ -61,7 +61,7 @@
         <section>
     
          <ul>
-            <li class="footeri"> Fang MIG❤️‍🔥  <a href="https://www.radio-danmark.dk/p8-jazz"><img src="assets/css/img/mail lille.png" alt="mail icon"></a> </li>
+            <li> Fang MIG❤️‍🔥 <a href="https://www.radio-danmark.dk/p8-jazz"><img src="assets/css/img/mail lille.png" alt="mail icon"></a> </li> 
         </section>
     
     <section class="footer2">
