--- a/inspiration.html
+++ b/inspiration.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <br> <br> <br>
-        <h1> Ursulas blog ❤️‍🔥</h1>
+        <h1> <a href="index.html">Ursulas blog❤️‍🔥</a></h1>
         <p> Her findes den bedste inspiration ❤️‍🔥<p>
     </header>
     <nav class="menu">
@@ -52,13 +52,13 @@
 
         <section class="footer1">
             <ul>
-                <li> <b> Fang MIG❤️‍🔥 </b> Ursulas@home.dk </li>
+                <li> Fang MIG❤️‍🔥  <a href="https://www.radio-danmark.dk/p8-jazz"><img src="assets/css/img/mail lille.png" alt="mail icon"></a> </li> 
          </section>
             <section class="footer2">
-                <li> <b>Følg MIG❤️‍🔥</b> <a href="https://icons8.com/icon/32323/instagram"><img src="assets/css/img/lilleiconinsta.png" alt="instagram icon"></a> <a href="https://www.iconfinder.com/search/icons?q=logo&price=free"><img src="assets/css/img/lillefacebookicon.png" alt="facebookicon"></a></li>
+                <li> Følg MIG❤️‍🔥 <a href="https://icons8.com/icon/32323/instagram"><img src="assets/css/img/lilleiconinsta.png" alt="instagram icon"></a> <a href="https://www.iconfinder.com/search/icons?q=logo&price=free"><img src="assets/css/img/lillefacebookicon.png" alt="facebookicon"></a></li>
             </section>
             <section class="footer3">
-                <li> <b>Like MIG❤️‍🔥</b>  <a href="https://www.iconfinder.com/search?q=tiktok&price=free"><img src="assets/css/img/lilletiktokicon.png" alt=" tiktok icon"></a> <a href="https://www.iconfinder.com/search?q=youtube&price=free"><img src="assets/css/img/ekstrayoutube.png" alt="youtubeicon"></a> </li> 
+                <li> Like MIG❤️‍🔥  <a href="https://www.iconfinder.com/search?q=tiktok&price=free"><img src="assets/css/img/lilletiktokicon.png" alt=" tiktok icon"></a> <a href="https://www.iconfinder.com/search?q=youtube&price=free"><img src="assets/css/img/ekstrayoutube.png" alt="youtubeicon"></a> </li> 
             
         </ul>
     </section>
