--- a/nyhedsbrev.html
+++ b/nyhedsbrev.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <br> <br> <br>
-        <h1> Ursulas blog ❤️‍🔥</h1>
+        <h1> <a href="index.html">Ursulas blog❤️‍🔥</a></h1>
          <h4> 
         Hvis du ikke kan få nok af mig❤️‍🔥  -så tilmeld dig mit nyhedsbrev
         </h4>
