--- a/om.html
+++ b/om.html
@@ -40,7 +40,7 @@
     <div class="box-om1"><img src="assets/css/img/ursula.jpg" alt="billedet af Ursula"></div>
      
 
-    <div class="box-om2"><p>Her bliver en lille fjer til en stor høne<p> </div>
+    <div class="box-om2"><p> <br> Her bliver en lille fjer til en stor høne<p> </div>
 </div>
     </main>
     <footer>
