--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="box-3"><a href="http://127.0.0.1:5500/inspiration.html"><img
                             src="assets/css/img/plastikstol1.jpg" alt="stol i plastik"></a></div>
                 <div class="box-4"><a href="http://127.0.0.1:5500/inspiration.html">
-                        <p> <br> <br> Se hvordan du kan skabe <br> stemmning i dit hjem.</p>
+                        <p> <br> <br> Se hvordan du skaber stemning i dit hjem .</p>
                     </a></div>
 
             </div>
